# integration

./: .env  .git-blame-ignore-revs  .gitignore  .gitlab-ci-default-pipeline.yml  .gitlab-ci-full-integration-generator.yml  .gitlab-ci-full-integration-template.yml  .gitlab-ci-full-integration.yml  .gitlab-ci-staging-tests.yml  .gitlab-ci.yml  .gitmodules  .travis.yml  CODEOWNERS  Dockerfile-full  Dockerfile-openresty-build  Dockerfile-stap  LIC_FILES_CHKSUM.sha256  MANIFEST.in  POC_README.md  README.md  cluster-setup.md  common.yml  component-maps.yml  containerCountUpdater.ts  create-tenant  database.py  demo  docker-compose-elk.yml  docker-compose.auditlogs.config.yml  docker-compose.auditlogs.connect.yml  docker-compose.auditlogs.yml  docker-compose.azure.yml  docker-compose.client-dev.yml  docker-compose.client-privileged.yml  docker-compose.client.demo.yml  docker-compose.client.extended.yml  docker-compose.client.rofs.commercial.yml  docker-compose.client.rofs.yml  docker-compose.client.yml  docker-compose.config.yml  docker-compose.connect.yml  (+44 more)
.github/: dependabot.yml
artifacts/: Dockerfile
integration_package/: pyproject.toml
integration_package/src/mender_integration/: docker-compose.testing.yml
integration_package/src/mender_integration.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
integration_package/src/mender_integration/compose_files/: .env  __init__.py  common.yml  docker-compose.client.rofs.commercial.yml  docker-compose.client.rofs.yml  docker-compose.client.yml  docker-compose.demo.yml  docker-compose.monitor-client.commercial.yml  docker-compose.storage-proxy.testing.yml  docker-compose.storage-proxy.yml
integration_package/src/mender_integration/compose_files/cert/: cert.crt
integration_package/src/mender_integration/tests/: common_setup.py  conftest.py
integration_package/src/mender_integration/tests/MenderAPI/: artifacts.py  authentication.py  deployments.py  devauth.py  deviceconnect.py  devicemonitor.py  inventory.py  requests_helpers.py
integration_package/src/mender_integration/tests/tests/: common_update.py
integration_package/src/mender_integration/testutils/: common.py
integration_package/src/mender_integration/testutils/api/: deployments_v2.py  inventory_v2.py  iot_manager.py  protomsg.py
integration_package/src/mender_integration/testutils/infra/: cli.py
integration_package/src/mender_integration/testutils/integration/: stripe.py
integration_package/src/mender_integration/testutils/util/: artifact.py
integration_package/src/mender_integration/utils/: compose_helpers.py
(+527 files in other folders)
